# voice-inbox-demo

./: .env.example  .gitignore  README.md  func.toml  pyproject.toml  setup.sh
function/: __init__.py  func.py
